.ci/kustomize/base/elasticsearch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: elasticsearch
    spec:
      imagePullSecrets:
      - name: gitlab-registry-auth
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
        name: elasticsearch
        livenessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 3
          periodSeconds: 10
