.ci/kustomize/base/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
  type: ClusterIP
