.ci/kustomize/base/elasticsearch-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  ports:
  - name: 9200-9200
    port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    app: elasticsearch
  type: ClusterIP
