.ci/kustomize/base/app-ingress-ans.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-ans
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  rules:
  - host: docs.ans.co.uk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port:
              number: 80
  tls:
  - hosts: 
    - docs.ans.co.uk
    secretName: docs-ans-co-uk-tls
